--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			<header class="ba-header">
 				<a class="logo" href="">
 					<img src="img/foliac-logo.png" alt="logo">
-				</a><nav>
+				</a>
+				<nav>
 					<ul>
 						<li><a href="#">Accueil</a></li>
 						<li><a href="#">Portfolio</a></li>
@@ -42,7 +43,48 @@
 		</div><!-- /.ba-container -->	
 	</section><!-- /.first-slide -->
 
-	<main id="main-content" role="main" >
+	<main id="main-content" role="main">
+	<div class="ba-container remove-space">
+
+		<div class="img-wrap ba-width-1-3">
+			<img src="img/multiple-items.png" alt="img">
+
+			<div class="hover-img">
+				<div class="hover-text">
+					<h3>Forest app</h3>
+					<p>application mobile</p>			
+				</div>	
+			</div>
+		</div><!-- /.img-wrap -->
+
+		<div class="img-wrap ba-width-2-3">
+			<img src="img/prototype.png" alt="img">
+
+			<div class="hover-img">
+				<h3>Forest app</h3>
+				<p>application mobile</p>			
+			</div>
+		</div><!-- /.img-wrap -->
+
+		<div class="img-wrap ba-width-2-3">
+			<img src="img/identité-visuelle.png" alt="img">
+
+			<div class="hover-img">
+				<h3>Forest app</h3>
+				<p>application mobile</p>			
+			</div>
+		</div><!-- /.img-wrap -->
+
+		<div class="img-wrap ba-width-1-3">
+			<img src="img/filters2.png
+			" alt="img">
+
+			<div class="hover-img">
+				<h3>Forest app</h3>
+				<p>application mobile</p>			
+			</div>
+		</div>
+	</div>	
 
 
 	</main>
