Add hover effects

--- a/index.html
+++ b/index.html
@@ -44,44 +44,64 @@
 	</section><!-- /.first-slide -->
 
 	<main id="main-content" role="main">
-	<div class="ba-container remove-space">
+		<div class="ba-container remove-space">
+			<div class="ba-grid">
 
-		<div class="img-wrap ba-width-1-3">
-			<img src="img/multiple-items.png" alt="img">
+				<div class="ba-width-2-5">
+					<div class="img-wrap use-display">
+						<img src="img/multiple-items.png" alt="img">
 
-			<div class="hover-img">
-				<div class="hover-text">
-					<h3>Forest app</h3>
-					<p>application mobile</p>			
-				</div>	
+						<div class="hover-img">
+							<div class="hover-text">
+								<h3>Forest app</h3>
+								<p>application mobile</p>
+							</div>
+						</div><!-- /.img-wrap -->
+					</div><!-- /.ba-width-2-5 -->
+				</div>
+
+				<div class="ba-width-3-5">
+					<div class="img-wrap use-opacity">
+						<img src="img/prototype.png" alt="img">
+
+						<div class="hover-img">
+							<div class="hover-text">
+								<h3>Forest app</h3>
+								<p>application mobile</p>
+							</div>
+						</div>
+					</div><!-- /.img-wrap -->
+				</div><!-- /.ba-width-2-5 -->
 			</div>
-		</div><!-- /.img-wrap -->
 
-		<div class="img-wrap ba-width-2-3">
-			<img src="img/prototype.png" alt="img">
+			<div class="ba-grid">
 
-			<div class="hover-img">
-				<h3>Forest app</h3>
-				<p>application mobile</p>			
-			</div>
-		</div><!-- /.img-wrap -->
+				<div class="ba-width-3-5">
+					<div class="img-wrap use-scale">
+						<img src="img/identité-visuelle.png" alt="img">
 
-		<div class="img-wrap ba-width-2-3">
-			<img src="img/identité-visuelle.png" alt="img">
+						<div class="hover-img">
+							<div class="hover-text">
+								<h3>Forest app</h3>
+								<p>application mobile</p>
+							</div>
+						</div>
+					</div><!-- /.img-wrap -->
+				</div>
 
-			<div class="hover-img">
-				<h3>Forest app</h3>
-				<p>application mobile</p>			
-			</div>
-		</div><!-- /.img-wrap -->
+				<div class="ba-width-2-5">
+					<div class="img-wrap use-translate">
+						<img src="img/filters2.png" alt="img">
 
-		<div class="img-wrap ba-width-1-3">
-			<img src="img/filters2.png
-			" alt="img">
+						<div class="hover-img">
+							<div class="hover-text">
+								<h3>Forest app</h3>
+								<p>application mobile</p>
+							</div>
+						</div>
+					</div><!-- /.img-wrap -->
+				</div>
 
-			<div class="hover-img">
-				<h3>Forest app</h3>
-				<p>application mobile</p>			
 			</div>
 		</div>
 	</div>	
